from core.models.time import Time
from core.models.railway.graph_adapter import GraphAdapter
from core.models.railway.graph_service import GraphService
from core.models.railway.path_finder import PathFinder
from core.models.railway.signalling_service import SignallingService
from core.models.repositories.station_repository import StationRepository
from core.models.repositories.timetable_repository import TimetableRepository
from core.models.repositories.train_repository import TrainRepository
from core.models.repositories.signal_repository import SignalRepository

class RailwaySystem:
    def __init__(self):
        self._is_saved: bool = True
        self._modified_subscribers = []
        self.time = Time()
        self._graph_adapter = GraphAdapter(on_modified=self.mark_modified)
        self._graph_service = GraphService(self)
        self._signal_repository = SignalRepository(self)
        self._station_repository = StationRepository(self)
        self._timetable_repository = TimetableRepository(self)
        self._train_repository = TrainRepository(self)
        self._pathfinder = PathFinder(self)
        self._signalling_service = SignallingService(self)
    
    def mark_modified(self) -> None:
        self._is_saved = False
        for callback in self._modified_subscribers:
            callback()
        
    def subscribe_to_modifications(self, callback) -> None:
        self._modified_subscribers.append(callback)
    
    @property
    def is_saved(self) -> bool:
        return self._is_saved
    
    def mark_as_saved(self) -> None:
        self._is_saved = True
    
    @property
    def graph(self) -> GraphAdapter:
        return self._graph_adapter
    
    @property
    def graph_service(self) -> GraphService:
        return self._graph_service
    
    @property
    def signals(self) -> SignalRepository:
        return self._signal_repository
    
    @property
    def timetables(self) -> TimetableRepository:
        return self._timetable_repository
            
    @property
    def stations(self) -> StationRepository:
        return self._station_repository

    @property
    def trains(self) -> TrainRepository:
        return self._train_repository
    
    @property
    def pathfinder(self) -> PathFinder:
        return self._pathfinder
    
    @property
    def signalling(self) -> SignallingService:
        return self._signalling_service
    
    def tick(self):
        for train in self._train_repository.all():
            train.tick()

    def to_dict(self) -> dict:
        return {
            'graph': self._graph_adapter.to_dict(),
            'station_repository': self._station_repository.to_dict(),
            'signal_repository': self._signal_repository.to_dict(),
            'timetable_repository': self._timetable_repository.to_dict(),
            'train_repository': self._train_repository.to_dict()
        }
    def replace_from_dict(self, data: dict) -> None:
        try:
            self._graph_adapter = GraphAdapter.from_dict(data['graph'], on_modified=self.mark_modified)
            self._station_repository = StationRepository.from_dict(self, data["station_repository"])
            self._signal_repository = SignalRepository.from_dict(self, data["signal_repository"])
            self._timetable_repository = TimetableRepository.from_dict(self, data['timetable_repository'])
            self._train_repository = TrainRepository.from_dict(self, data['train_repository'])
        except Exception as e:
            # All repositories reset if any one fails
            self._graph_adapter = GraphAdapter(on_modified=self.mark_modified)
            self._station_repository = StationRepository(self)
            self._signal_repository = SignalRepository(self)
            self._timetable_repository = TimetableRepository(self)
            self._train_repository = TrainRepository(self)
            raise e
        
        self.mark_as_saved()
